@@ -308,6 +308,10 @@ Trunk (unreleased changes)
 
     HADOOP-5727. Simplify hashcode for ID types. (Shevek via cdouglas)
 
+    HADOOP-5500. In DBOutputFormat, where field names are absent permit the
+    number of fields to be sufficient to construct the select query. (Enis
+    Soztutar via cdouglas)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
